# AHRS

./: LICENSE  README.md
Qt/: AHRS.cpp  AHRS.h  AHRS.pro  CMakeLists.txt  ahrs_widgets.cpp  ahrs_widgets.h  ahrs_window.cpp  ahrs_window.h  ahrs_window.ui  main.cpp
firmware/arduino/ahrs/: Adafruit_AHRS.h  Adafruit_FXAS21002C.h  Adafruit_FXOS8700.h  Adafruit_Sensor_Calibration.cpp  Adafruit_Sensor_Calibration.h  Adafruit_Sensor_Calibration_EEPROM.cpp  Adafruit_Sensor_Calibration_SDFat.h  Adafruit_Sensor_Calibration_hardcoded.cpp  Adafruit_Sensor_Calibration_hardcoded.h  Adafruit_Sensor_Set.h  Adafruit_Simple_AHRS.h  NXP_FXOS_FXAS.h  SparkFun_Ublox_Arduino_Library.cpp  SparkFun_Ublox_Arduino_Library.h  ahrs.ino
